# MoltenMeta

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  config.toml  main.py  problems_and_plans.md  pyproject.toml  requirements.txt  todolist.md
assets/: config.toml
core/: configure.py
core/config/: __init__.py  config.py
core/fio/: __init__.py  config_loader.py  language_package_loader.py
core/log/: __init__.py  log.py
doc/drawio/: arch.drawio
docs/pic/drawio/: arch.drawio  sqlite_ERD.drawio
examples/core/latex_render/: test.py
examples/pybind11/: CMakeLists.txt  add.cpp  add.py
fio/: __init__.py  config_loader.py
gui/: main_window.py  main_window.ui  pyproject.toml  ui_main_window.py
gui/background_layer/: __init__.py  ui.py  widget.py
gui/menubar/: ui.py  widget.py
gui/pages/: __init__.py  background_page.py  home_page.py  page_controller.py  workspace.py
gui/pages/home_page/: home_page.py  ui.py  widget.py
gui/pages/settings_page/: controller.py  ui.py  widget.py
gui/sidebar/: __init__.py  ui.py  widget.py
i18n/: __init__.py  language.py  zh_CN.ts
i18n/en/: settings.qm  settings.ts
i18n/zh_CN/: settings.qm  settings.ts
runtime/: config.toml
scripts/: collect_tr_files.sh  commits.txt  get_commit_log.sh  lupdate.sh  replace_tr.sh  translate_files.txt
src/: main.py
src/application/: app_context.py  app_startup.py  db_serivce.py
src/application/service/: __init__.py  app_startup_service.py  core_db_service.py  db_service.py  module_service.py  unified_data_query_service.py  user_db_service.py
src/application/settings/: serialize.py  settings.py
src/catalog/: __init__.py  database.py  input_limits.py  language.py  log_level.py  plot_style.py
src/core/: composition.py  element_map.py  latex_render.py
src/core/config/: __init__.py  __init__.py.old  config.py  config.py.old
src/core/fio/: __init__.py  config_io.py  language_package_loader.py
src/core/log/: __init__.py  log.py  log_service.py
src/core/platform/: __init__.py  args.py  runtime_paths.py
src/core/plot/: __init__.py  color.py  config.py  latex_utils.py  result_resolver.py  style.py
src/db/: __init__.py  abstraction.py  base_repository.py  db_manager.py  db_service.py  manager.py  modules_db_manager.py  schema.sql
src/db/adapters/: __init__.py  postgresql.py  sqlite.py
src/db/core/: __init__.py  core_manager.py
src/db/core/repo/: settings_repositories.py  (+1 more)
src/db/modules_db/: __init__.py  modules_repository_base.py
src/db/repo/: __init__.py  base_repository.py  repositories.py
src/db/seeds/: elements_seed.py  settings_seed.py  symbols_seed.py
src/db/snapshot/: __init__.py  computation_cache_snapshot.py  data_group_snapshot.py  element_snapshot.py  meta_snapshot.py  method_snapshot.py  property_snapshot.py  property_tag_snapshot.py  property_value_condition_snapshot.py  property_value_snapshot.py  settings_snapshot.py  snapshot_base.py  snapshots.py  symbol_snapshot.py  system_composition_snapshot.py  system_snapshot.py  unit_snapshot.py
src/db/user/: __init__.py  user_manager.py
src/doc/drawio/: sqlite_ERD.drawio
src/domain/: __init__.py
src/domain/query/: settings_query.py
src/domain/settings/: __init__.py  serialize.py  settings.py
src/domain/snapshot/: __init__.py  snapshot_base.py  snapshots.py
src/framework/: binary_provider.py  data_module_registry.py  data_source.py  data_source_registry.py  module_manager.py
src/gui/: main_window.py  ui_main_window.py
src/gui/background_layer/: __init__.py  ui.py  widget.py
src/gui/menubar/: __init__.py  ui.py  widget.py
src/gui/pages/: __init__.py  page_controller.py  workspace.py
src/gui/sidebar/: __init__.py  ui.py  widget.py
src/i18n/: __init__.py  i18n_service.py  zh_CN.qm  zh_CN.ts
src/modules/: build.ps1  build.sh
src/modules/MiedemaModule/: CMakeLists.txt  MiedemaModule.cpp  config.toml  miedema_core.cpp  miedema_module.py
src/modules/composition_input_module/: __init__.py  composition_input.py  config.toml
src/modules/element_map/: element_map.py
src/modules/element_properties_module/: __init__.py  config.toml  element_properties_module.py
src/modules/geometric_model_core/: __init__.py  base_calculator.py  data_source_discovery.py  wizard_base.py
src/modules/grid_module/: CMakeLists.txt  __init__.py  build.sh  grid.py  triangular_grid.cpp
src/modules/hillert_toop_module/: CMakeLists.txt  __init__.py  config.toml  data_source_discovery.py  element_map.py  hillert_toop_algorithm.cpp  hillert_toop_module.py
src/modules/hillert_toop_module/ui/: __init__.py  widget.py  widget_contour.py  widget_scatter.py  wizard_pages.py
src/modules/kohler_module/: CMakeLists.txt  __init__.py  build.sh  config.toml  data_source_discovery.py  element_map.py  kohler_algorithm.cpp  kohler_grid.cpp  kohler_module.py
src/modules/kohler_module/ui/: __init__.py  widget.py  widget_contour.py  widget_scatter.py  wizard_pages.py
src/modules/maggianu_module/: CMakeLists.txt  __init__.py  config.toml  data_source.py  data_source_discovery.py  maggianu_algorithm.cpp  maggianu_module.py
src/modules/maggianu_module/ui/: __init__.py  widget.py  widget_contour.py  widget_scatter.py
src/modules/miedema_module/: CMakeLists.txt  __init__.py  build.ps1  build.sh  config.toml  element_map.py  miedema_core.cpp  miedema_module.py
src/modules/toop_module/: CMakeLists.txt  __init__.py  build.ps1  config.toml  data_source.py  data_source_discovery.py  data_source_registry.py  element_map.py  toop_algorithm.cpp  toop_grid.cpp  toop_module.py
src/resources/: default.toml
src/resources/data/: elements.csv  elements_without.csv  miedema_element_properties.csv  symbols.csv
src/resources/default/: default.toml.old  default_config_file.toml  default_settings.toml
src/resources/i18n/: zh_CN.qm  zh_CN.ts
src/resources/qt_material/: __init__.py  default.css  extra.py
src/resources/styles/: __init__.py  ads_theme.py
test/db/: test_database_operations.py  test_structure.py
test/old/db/: test_adapters.py  test_database_operations.py  test_sqlite.py  test_structure.py
(+76 files in other folders)
