[project]
name = "moltenmeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "pyside6",
    "pyside6-addons",
    "pyside6-essentials",
    "pyside6-qtads",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "nuitka",
    "pybind11",
    "ruff",
]
